--- a/MidiPort/MidiPort.vcxproj
+++ b/MidiPort/MidiPort.vcxproj
@@ -88,4 +88,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties debug.view.AnalogPins="1" debug.view.DigitalPins="1" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
